@@ -1,3 +1,7 @@
+  [Michele Simionato]
+  * Improved the number of tasks generated in postclassical (they were too
+    many for EUR)
+
   [Amirhossein Mohammadi]
   * Added Mohammadi2023Turkiye ML-based GSIM for Turkey.
 
